# abi_countdown

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE.md  README.md  clippy.toml  tailwind.css
assets/: events.json
src/: main.rs  state.rs
src/components/: card.rs  mod.rs  next_exam.rs  progress.rs
