[package]
name = "abi_countdown"
version = "0.1.0"
authors = ["David Schmidt <64831818+Dav321@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.3" }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

chrono = { version = "0.4.43", features = ["serde"] }
gloo-timers = "0.3.0"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]